test classes added and bit refactoring of service classes